<resources>
    <string name="app_name">Weather Oracle</string>
    <string name="greeting_text">Greetings!</string>
    <string name="citiesButtonText">Choose city</string>

    <string name="citiesTextViewUnknownText">Unknown</string>
    <string name="temperatureTextViewUnknownText">Unknown</string>
    <string name="infoTextViewUnknownText">Unknown</string>
    <string name="onDayTextView">On day</string>
    <string name="onWeekTextView">On week</string>
    <string name="infoTextViewClickMeText">Click me!</string>

    <string name="citiesMoscowLabelText">Moscow</string>
    <string name="citiesPetersburgLabelText">Petersburg</string>
    <string name="citiesVolgogradLabelText">Volgograd</string>
    <string name="citiesKazanLabelText">Kazan</string>
    <string name="citiesButtonCloseText">Close</string>
    <string name="bottom_menu_location">location</string>
    <string name="bottom_menu_map">map</string>
    <string name="bottom_menu_layout">about</string>

    <string name="about_developer" translatable="false">Who: JamesDeGrizz\n Why: education\n When: october 2020\n Where: Moscow, Russia How: my-email@gmail.com</string>
    <string name="snackbar_non_clickable">Non-clickable</string>
    <string name="snackbar_location_warning">Choose location first</string>
    <string name="snackbar_about_test">About</string>
    <string name="cityFilter">filter</string>

    <string name="alert_dialog_message">Can\'t load weather</string>
    <string name="alert_dialog_title">Warning</string>
    <string name="alert_dialog_positive_button_text">Continue</string>
    <string name="menu_location">location</string>
    <string name="author">JamesDeGrizz</string>
    <string name="author_email">JamesDeGrizz@gmail.com</string>
    <string name="history">history</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="nav_main">main</string>

    <string-array name="weekly_days">
        <item>22 october</item>
        <item>23 october</item>
        <item>23 october</item>
        <item>24 october</item>
        <item>25 october</item>
        <item>26 october</item>
    </string-array>

    <string-array name="weekly_temperature">
        <item>+8</item>
        <item>+7</item>
        <item>+5</item>
        <item>+7</item>
        <item>+3</item>
        <item>+4</item>
    </string-array>

    <string-array name="daily_hours">
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
    </string-array>

    <string-array name="daily_temperature">
        <item>+10</item>
        <item>+11</item>
        <item>+10</item>
        <item>+9</item>
        <item>+9</item>
        <item>+8</item>
    </string-array>
</resources>