<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/citiesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/citiesButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <!-- Location -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/location"
        app:layout_constraintBottom_toTopOf="@+id/imageViewTemperature"
        app:layout_constraintEnd_toStartOf="@+id/textViewChosenCity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewChosenCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="229dp"
        android:gravity="center"
        android:text="@string/citiesTextViewUnknownText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Temperature -->
    <ImageView
        android:id="@+id/imageViewTemperature"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/temperature"
        app:layout_constraintBottom_toTopOf="@id/imageViewInfo"
        app:layout_constraintEnd_toStartOf="@id/textViewTemperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        android:id="@+id/textViewTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="229dp"
        android:gravity="center"
        android:text="@string/temperatureTextViewUnknownText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewTemperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageViewTemperature"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <!-- Info -->
    <ImageView
        android:id="@+id/imageViewInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="518dp"
        android:src="@drawable/info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textViewInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewTemperature" />

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="229dp"
        android:gravity="center"
        android:text="@string/infoTextViewUnknownText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageViewInfo"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTemperature"
        app:layout_constraintVertical_bias="0.487" />

</androidx.constraintlayout.widget.ConstraintLayout>