<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        tools:context=".Fragments.FragmentMain">

        <!-- Location -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="top|left"
            android:src="@drawable/location" />

        <TextView
            android:id="@+id/textViewChosenCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginLeft="50dp"
            android:gravity="center"
            android:text="@string/citiesTextViewUnknownText"
            android:textSize="28sp" />

        <!-- Temperature -->
        <ImageView
            android:id="@+id/imageViewTemperature"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="top|left"
            android:layout_marginTop="40dp"
            android:src="@drawable/temperature" />

        <TextView
            android:id="@+id/textViewTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/temperatureTextViewUnknownText"
            android:textSize="28sp" />

        <!-- Info -->
        <ImageView
            android:id="@+id/imageViewInfo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="top|left"
            android:layout_marginTop="80dp"
            android:src="@drawable/info" />

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/infoTextViewUnknownText"
            android:textSize="28sp" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/design_default_color_primary"
        android:text="@string/onDayTextView"
        android:textSize="28sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dayTempView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        tools:listitem="@layout/day_temp_item">
    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/design_default_color_primary"
        android:text="@string/onWeekTextView"
        android:textSize="28sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/weeklyTempView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        tools:listitem="@layout/weekly_temp_item">
    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/design_default_color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_menu_layout" />
    <!--android:background="?android:attr/windowBackground"-->


</LinearLayout>